# frank_mangaplus

./: .gitignore  AGENTS.md  README.md
.github/workflows/: aur-publish.yml  ci.yml  release.yml
docs/: android-secret.md  debugging.md  install.md  troubleshooting.md
reader/: .gitignore  Cargo.toml  verify.sh
reader/api/: Cargo.toml  build.rs
reader/api/examples/: decode_err.rs  dump_fav.rs  find_titles.rs  probe.rs  probe2.rs  probe_chain.rs  probe_image.rs  probe_image_wreq.rs  probe_viewer.rs  register_smoketest.rs
reader/api/proto/: mangaplus.proto
reader/api/src/: client.rs  error.rs  lib.rs
reader/api/tests/: parse_fixtures.rs
reader/desktop/: package.json
reader/desktop/src/: app.css
reader/desktop/src-tauri/: Cargo.toml  frank-mangaplus.desktop  tauri.conf.json
reader/desktop/src-tauri/src/: all_titles_cache.rs  lib.rs  main.rs  render_env.rs
reader/desktop/src/lib/: HelpModal.svelte  SecretSetup.svelte  TitleCard.svelte  img.test.ts  img.ts  ipcCommands.ts  ipcTimeout.test.ts  ipcTimeout.ts  lang.test.ts  lang.ts  readState.test.ts  readState.ts  readerLogic.test.ts  readerLogic.ts  searchLogic.test.ts  searchLogic.ts  types.ts
reader/desktop/src/routes/: +layout.svelte  +page.svelte
reader/desktop/src/routes/reader/[chapterId]/: +page.svelte
reader/desktop/src/routes/search/: +page.svelte
reader/desktop/src/routes/title/[id]/: +page.svelte
reader/docs/: android-secret.md
releases/: v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.6.3.md  v0.6.4.md  v0.6.5.md  v0.6.6.md  v0.6.7.md  v0.6.8.md  v0.6.9.md  v0.7.0.md  v0.7.1.md  v0.7.2.md  v0.7.3.md  v0.7.4.md  v0.7.5.md  v0.7.6.md  v0.8.0.md  v0.9.0.md  v0.9.1.md  v0.9.2.md  v0.9.3.md  v0.9.4.md  v0.9.5.md  v0.9.6.md
