[package]
name = "mangaplus-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Personal-use desktop reader for MANGA Plus"

[lib]
name = "mangaplus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
mangaplus-api = { workspace = true }
tokio = { workspace = true }

